Issue with MPI_Gather, MPI_Scatterv still to-do

--- a/pure_mpi/Makefile
+++ b/pure_mpi/Makefile
@@ -7,13 +7,13 @@ MPI_CC=mpicc
 CFLAGS=-O3 -I$(HEADER_DIR) -Wall
 LDFLAGS=
 
-SRC= apm.c apm_mpi_patterns_over_ranks.c
+SRC= apm.c apm_patterns_over_ranks.c
 
 OBJ= $(OBJ_DIR)/apm.o
 
-OBJ_MPI_1= $(OBJ_DIR)/apm_mpi_patterns_over_ranks.o
+OBJ_MPI_1= $(OBJ_DIR)/apm_patterns_over_ranks.o
 
-all: $(OBJ_DIR) apm apm_mpi_patterns_over_ranks
+all: $(OBJ_DIR) apm apm_patterns_over_ranks
 
 $(OBJ_DIR):
 	mkdir $(OBJ_DIR)
@@ -24,8 +24,8 @@ $(OBJ_DIR)/%.o : $(SRC_DIR)/%.c
 apm:$(OBJ)
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
-apm_mpi_patterns_over_ranks:$(OBJ_MPI_1)
+apm_patterns_over_ranks:$(OBJ_MPI_1)
 	$(MPI_CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
 clean:
-	rm -f apm apm_mpi_patterns_over_ranks $(OBJ) $(OBJ_MPI_1) ; rmdir $(OBJ_DIR)
+	rm -f apm apm_patterns_over_ranks $(OBJ) $(OBJ_MPI_1) ; rmdir $(OBJ_DIR)
