add broadcasting check results from master to worker ranks, better data flow in parallel openmp region, and added slurm batch files for small & big DB

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.cu": "cpp",
-        "string.h": "c"
+        "string.h": "c",
+        "utils.h": "c"
     }
 }
